<resources>
    <string name="app_name">HiLo</string>
    <string name="action_about">About</string>
    <string name="author" translatable="false">Marjan Tropper (trop0008)</string>
    <string name="game_instructions">Please guess a number between \n 1 and 1000</string>
    <string name="game_not_number">This is Not a number. Please, try again.</string>
    <string name="game_guesses_remaining">You have %1$d guesses!</string>
    <string name="game_lost">Game Lost :( </string>
    <string name="game_Reset">Please Reset Game!</string>
    <string name="game_excellent_win">Excellent win!</string>
    <string name="game_superior_win">Superior win!</string>
    <string name="game_high_guess">%1$d is too High! Please pick a lower number!</string>
    <string name="game_low_guess">%1$d is too Low! Please pick a higher number!</string>
    <string name="game_random_number">The number was %1$d</string>
    <string name="btn_guess">Check my Guess</string>
    <string name="btn_reset">Reset Game</string>
    <string name="img_happy_face">Happy Face</string>
    <string name="img_sad_face">Sad Face</string>
    <string name="img_winner">Winner</string>
    <string name="hintString">Enter a number between 1 and 1000</string>


</resources>
