<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.edumedia.trop0008.hilo.MainActivity">


    <ImageView
        android:id="@+id/iconImge"
        android:layout_width="116dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/img_happy_face"
        android:src="@drawable/happyicon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf = "@+id/gameInstructions"
        />


    <EditText
        android:id="@+id/txtUserGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter a number"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameInstructions"
        app:layout_constraintHorizontal_bias="0.47"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuess" />

    <TextView
        android:id="@+id/gameInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/txtUserGuess"
        android:text="@string/game_instructions"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.SuggestionHighlight"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUserGuess"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/iconImge"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/btnGuess"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:background="@color/primaryDarkColor"
        android:onClick="onClickBtnGuess"
        android:text="@string/btn_guess"
        android:textColor="@color/colorTextLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserGuess" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:longClickable="true"
        android:onClick="onClickBtnReset"
        android:padding="10dp"
        android:text="@string/btn_reset"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuess"
        app:layout_constraintVertical_bias="0.004"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/NumGuesses"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        tools:text="@string/game_guesses_remaining"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iconImge"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.703"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/gameInstructions"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.596"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
